# Okapi

./: .cookiecutter.json  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  bandit.yaml  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/okapi/: __init__.py  __main__.py  auth.py  client.py  exception.py
src/okapi/api/: __init__.py  kraken.py  market.py  public.py  user.py  utils.py
tests/: __init__.py  test_main.py
