[tool.poetry]
name = "okapi"
version = "0.0.0"
description = "Okapi"
authors = ["Romain Brault <mail@romainbrault.com>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/RomainBrault/okapi"
repository = "https://github.com/RomainBrault/okapi"
documentation = "https://okapi.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/RomainBrault/okapi/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.1"
typeguard = "^2.13.3"
httpx = "^0.22.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = {extras = ["toml"], version = "^6.1"}
safety = "^1.10.3"
mypy = "^0.942"
typeguard = "^2.13.2"
xdoctest = {extras = ["colors"], version = "^1.0.0"}
sphinx = "^4.5.0"
sphinx-autobuild = ">=2021.3.14"
pre-commit = "^2.15.0"
black = ">=21.10b0"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^3.0.0"
pre-commit-hooks = "^4.0.1"
sphinx-click = "^3.0.2"
Pygments = "^2.10.0"
pyupgrade = "^2.29.1"
furo = ">=2021.11.12"
pylint = "^2.13.3"
bandit = "^1.7.4"
xenon = "^0.9.0"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"

[tool.poetry.scripts]
okapi = "okapi.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["okapi", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
      # The following are specific to Black, you probably don't want those.
      | blib2to3
        | tests/data
          | profiling
 )/
'''
# We use preview style for formatting Black itself. If you
# want stable formatting across releases, you should keep
# this off.
preview = true

# Build system information below.
# NOTE: You don't need this in your own Black configuration.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
